; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_marshal.c_ifproxy_disconnect.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_marshal.c_ifproxy_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifproxy = type { i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifproxy*)* @ifproxy_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ifproxy_disconnect(%struct.ifproxy* %0) #0 {
  %2 = alloca %struct.ifproxy*, align 8
  store %struct.ifproxy* %0, %struct.ifproxy** %2, align 8
  %3 = load %struct.ifproxy*, %struct.ifproxy** %2, align 8
  %4 = call i32 @ifproxy_release_public_refs(%struct.ifproxy* %3)
  %5 = load %struct.ifproxy*, %struct.ifproxy** %2, align 8
  %6 = getelementptr inbounds %struct.ifproxy, %struct.ifproxy* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.ifproxy*, %struct.ifproxy** %2, align 8
  %11 = getelementptr inbounds %struct.ifproxy, %struct.ifproxy* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @IRpcProxyBuffer_Disconnect(i64 %12)
  br label %14

14:                                               ; preds = %9, %1
  %15 = load %struct.ifproxy*, %struct.ifproxy** %2, align 8
  %16 = getelementptr inbounds %struct.ifproxy, %struct.ifproxy* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @IRpcChannelBuffer_Release(i32* %17)
  %19 = load %struct.ifproxy*, %struct.ifproxy** %2, align 8
  %20 = getelementptr inbounds %struct.ifproxy, %struct.ifproxy* %19, i32 0, i32 0
  store i32* null, i32** %20, align 8
  ret void
}

declare dso_local i32 @ifproxy_release_public_refs(%struct.ifproxy*) #1

declare dso_local i32 @IRpcProxyBuffer_Disconnect(i64) #1

declare dso_local i32 @IRpcChannelBuffer_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
